--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<title>Simple Interest Calculator</title>
+		<title>Web App - Simple Interest Calculator</title>
 		<script src="script.js"></script>
 		<link rel="stylesheet" href="style.css">
     </head>
@@ -24,10 +24,10 @@
 				<option value="10">10</option>
             </select><br/>
 			
-			<button onclick="compute()">Compute</button><br/>
+			<button onclick="compute()">Compute Interest</button><br/>
 			<span id="result"></span><br>
 			<span id="result"></span>
-			<footer>&#169; This Calculator belongs to Sugandran Govindsamy</footer>
+			<footer>&#169; Everyone Can Get Rich</footer>
 		</div>
     </body>
 </html>
